Resolve overflow issues
I can’t say that I fully understood why these styles where applied in the first place, so I'm not entirely sure this isn't breaking anything, but at first look everything seems okay.

--- a/ui/src/viewers/PdfViewer.scss
+++ b/ui/src/viewers/PdfViewer.scss
@@ -15,8 +15,6 @@ $pagesWidth: 150px;
     height: 100%;
     width: 100%;
     flex: 1;
-    overflow-x: hidden;
-    overflow-y: visible;
 
     .inner {
       flex: 1;
@@ -25,6 +23,7 @@ $pagesWidth: 150px;
 
       .document {
         width: 100%;
+        overflow: hidden;
 
         pre {
           border: unset;
